-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.8.0
-
None
-
3
-
9223372036854775807
May 29 11:29:55 lola-10 kernel: LustreError: 98865:0:(ldlm_lib.c:1751:check_for_next_transno()) soaked-MDT0005: waking for gap in transno, VBR is OFF (skip: 34359762235, ql: 1, comp: 14, conn: 15, next: 34359762237, last_committed: 34359762216)
May 29 11:29:55 lola-10 kernel: LustreError: 98865:0:(ldlm_lib.c:1751:check_for_next_transno()) soaked-MDT0005: waking for gap in transno, VBR is OFF (skip: 34359762238, ql: 1, comp: 14, conn: 15, next: 34359762245, last_committed: 34359762216)
May 29 11:29:55 lola-10 kernel: Lustre: soaked-MDT0005-osp-MDT0004: Connection restored to soaked-MDT0005 (at 0@lo)
May 29 11:29:55 lola-10 kernel: Lustre: soaked-MDT0005: Recovery over after 1:24, of 15 clients 15 recovered and 0 were evicted.
May 29 11:29:55 lola-10 kernel: LustreError: 104212:0:(osd_object.c:1553:osd_object_ref_del()) ASSERTION( dt_object_exists(dt) ) failed:
May 29 11:29:55 lola-10 kernel: LustreError: 104212:0:(osd_object.c:1553:osd_object_ref_del()) LBUG
May 29 11:29:55 lola-10 kernel: Pid: 104212, comm: mdt02_007
May 29 11:29:55 lola-10 kernel:
May 29 11:29:55 lola-10 kernel: Call Trace:
May 29 11:29:55 lola-10 kernel: [<ffffffffa05c9875>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
May 29 11:29:55 lola-10 kernel: [<ffffffffa05c9e77>] lbug_with_loc+0x47/0xb0 [libcfs]
May 29 11:29:55 lola-10 kernel: [<ffffffffa0ec8c12>] osd_object_ref_del+0x212/0x280 [osd_zfs]
May 29 11:29:55 lola-10 kernel: [<ffffffffa10be7cb>] lod_sub_object_ref_del+0xbb/0x290 [lod]
May 29 11:29:55 lola-10 kernel: [<ffffffffa10b28e6>] lod_object_destroy+0x416/0x770 [lod]
May 29 11:29:55 lola-10 kernel: [<ffffffffa1107a71>] mdd_object_create+0x2f1/0x8d0 [mdd]
May 29 11:29:55 lola-10 kernel: [<ffffffffa1108780>] mdd_migrate_create+0x730/0xb50 [mdd]
May 29 11:29:55 lola-10 kernel: [<ffffffffa1109101>] mdd_migrate+0x561/0x16b0 [mdd]
May 29 11:29:55 lola-10 kernel: [<ffffffffa05d5c51>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
May 29 11:29:55 lola-10 kernel: [<ffffffffa05d2248>] ? libcfs_log_return+0x28/0x40 [libcfs]
May 29 11:29:55 lola-10 kernel: [<ffffffffa0fe7eec>] mdt_reint_migrate_internal+0x16ec/0x1b50 [mdt]
May 29 11:29:55 lola-10 kernel: [<ffffffffa0febf3b>] mdt_reint_rename_or_migrate+0x3cb/0x6c0 [mdt]
May 29 11:29:55 lola-10 kernel: [<ffffffffa0fec243>] mdt_reint_migrate+0x13/0x20 [mdt]
May 29 11:29:55 lola-10 kernel: [<ffffffffa0fe4a7d>] mdt_reint_rec+0x5d/0x200 [mdt]
May 29 11:29:55 lola-10 kernel: [<ffffffffa0fc9f5b>] mdt_reint_internal+0x4cb/0x7a0 [mdt]
May 29 11:29:55 lola-10 kernel: [<ffffffffa0fca6cb>] mdt_reint+0x6b/0x120 [mdt]
May 29 11:29:55 lola-10 kernel: [<ffffffffa0998f1e>] tgt_request_handle+0x94e/0x10a0 [ptlrpc]
May 29 11:29:55 lola-10 kernel: [<ffffffffa09489c1>] ptlrpc_main+0xe41/0x1970 [ptlrpc]
May 29 11:29:55 lola-10 kernel: [<ffffffffa0947b80>] ? ptlrpc_main+0x0/0x1970 [ptlrpc]
May 29 11:29:55 lola-10 kernel: [<ffffffff8109e71e>] kthread+0x9e/0xc0
May 29 11:29:55 lola-10 kernel: [<ffffffff8100c20a>] child_rip+0xa/0x20
May 29 11:29:55 lola-10 kernel: [<ffffffff8109e680>] ? kthread+0x0/0xc0
May 29 11:29:55 lola-10 kernel: [<ffffffff8100c200>] ? child_rip+0x0/0x20